--- a/Activity_2_Joseph_Emmanuel/nodeCode.html
+++ b/Activity_2_Joseph_Emmanuel/nodeCode.html
@@ -9,15 +9,14 @@
   <body>
     <h1 style="text-align: center;">Using node JS</h1>
     <br /><br />
+    <form action="/reg" method="POST">
+      <div id="player1">
+        <div class="container">
+          <h1>Player 1</h1>
+          <p>Please fill in this form</p>
+          <hr />
 
-    <div id="player1">
-      <div class="container">
-        <h1>Player 1</h1>
-        <p>Please fill in this form</p>
-        <hr />
-
-        <form action="/" method="POST">
-          <label for="fname"><b>First Name</b></label>
+          <label><b>First Name</b></label>
           <input
             type="text"
             placeholder="Enter First Name"
@@ -26,7 +25,7 @@
             required
           />
 
-          <label for="lname"><b>Last Name</b></label>
+          <label><b>Last Name</b></label>
           <input
             type="text"
             placeholder="Enter Last Name"
@@ -35,7 +34,7 @@
             required
           />
 
-          <label for="email"><b>Email</b></label>
+          <label><b>Email</b></label>
           <input
             type="text"
             placeholder="Enter Email"
@@ -43,51 +42,50 @@
             id="emailp1"
             required
           />
-          <div class="clearfix">
-            <button type="submit" id="registerbtn">Start</button>
-          </div>
-        </form>
 
-        <hr />
+          <hr />
+        </div>
       </div>
-    </div>
 
-    <div id="player2">
-      <div class="container">
-        <h1>Player 2</h1>
-        <p>Please fill in this form</p>
-        <hr />
+      <div id="player2">
+        <div class="container">
+          <h1>Player 2</h1>
+          <p>Please fill in this form</p>
+          <hr />
 
-        <label for="fname"><b>First Name</b></label>
-        <input
-          type="text"
-          placeholder="Enter First Name"
-          name="fname"
-          id="fnamep2"
-          required
-        />
+          <label><b>First Name</b></label>
+          <input
+            type="text"
+            placeholder="Enter First Name"
+            name="fname2"
+            id="fnamep2"
+            required
+          />
 
-        <label for="lname"><b>Last Name</b></label>
-        <input
-          type="text"
-          placeholder="Enter Last Name"
-          name="lname"
-          id="lnamep2"
-          required
-        />
+          <label><b>Last Name</b></label>
+          <input
+            type="text"
+            placeholder="Enter Last Name"
+            name="lname2"
+            id="lnamep2"
+            required
+          />
 
-        <label for="email"><b>Email</b></label>
-        <input
-          type="text"
-          placeholder="Enter Email"
-          name="email"
-          id="emailp2"
-          required
-        />
-        <hr />
+          <label><b>Email</b></label>
+          <input
+            type="text"
+            placeholder="Enter Email"
+            name="email2"
+            id="emailp2"
+            required
+          />
+          <hr />
+        </div>
       </div>
-    </div>
-
+      <div class="clearfix">
+        <button type="submit" id="registerbtn">Start</button>
+      </div>
+    </form>
     <script src="js/regScript.js"></script>
   </body>
 </html>
